openshift/site_registry/dev/database/site_postgres_cluster_bcgw_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-postgres-cluster-bcgw
  namespace: c6a6e5-dev
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    postgres-operator.crunchydata.com/cluster: site-postgres-cluster
    postgres-operator.crunchydata.com/role: primary
