openshift/site_registry/dev/database/site_postgres_cluster_bcgw_network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: site-postgres-cluster-bcgw
  namespace: c6a6e5-dev
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: site-postgres-cluster
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
